--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,13 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  /*background-color:#444;*/
   font-size: 18px;
+  background-image: url("img/kitchen.jpg");
+  background-repeat:  no-repeat;
+  background-size: 1280px auto;
+  
+
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -21,8 +26,8 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
+  /*border:10px solid red;*/
+  /*border-radius:10px;*/
   position:absolute;
 }
 
@@ -30,3 +35,14 @@ body, a:link, a:visited, a:active{
 .jumpingClass {
   top: 400 px;
 }
+
+.position-floor{
+  position: absolute;
+  bottom: 15vh;
+  border: 30px red solid;
+  left: 100px;
+}
+
+/*.lineUP{
+  top:500px;
+}*/
